[gd_scene load_steps=3 format=3 uid="uid://dy4gf7t6n5uc0"]

[ext_resource type="Script" path="res://Scenes/Components/deck_select_btn.gd" id="1_83xx5"]
[ext_resource type="Script" path="res://Scenes/Components/DeckHeader.gd" id="2_te2hj"]

[node name="DeckList" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_83xx5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0
script = ExtResource("2_te2hj")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2

[node name="DeckName" type="RichTextLabel" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[left][color=8D8D8D]	Categoria"
scroll_active = false

[node name="NumWords" type="RichTextLabel" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[center][color=8D8D8D]Palavras"
scroll_active = false
